--- a/index.html
+++ b/index.html
@@ -29,57 +29,59 @@
 
 	   <h1>Indeterminate Checkboxes</h1>
 
-  	 <ul>
-        <li>
-            <input type="checkbox" name="tall" id="tall">
-            <label for="tall">Tall Things</label>
+		 <div>
+	  	 <ul>
+	        <li>
+	            <input type="checkbox" name="tall" id="tall" class="indeterminate-checkbox">
+	            <label for="tall">Tall Things</label>
 
-            <ul>
-                 <li>
-                     <input type="checkbox" name="tall-1" id="tall-1">
-                     <label for="tall-1">Buildings</label>
-                 </li>
-                 <li>
-                     <input type="checkbox" name="tall-2" id="tall-2">
-                     <label for="tall-2">Giants</label>
+	            <ul>
+	                 <li>
+	                     <input type="checkbox" name="tall-1" id="tall-1" class="indeterminate-checkbox">
+	                     <label for="tall-1">Buildings</label>
+	                 </li>
+	                 <li>
+	                     <input type="checkbox" name="tall-2" id="tall-2" class="indeterminate-checkbox">
+	                     <label for="tall-2">Giants</label>
 
-                     <ul>
-                         <li>
-                             <input type="checkbox" name="tall-2-1" id="tall-2-1">
-                             <label for="tall-2-1">Andre</label>
-                         </li>
-                         <li>
-                             <input type="checkbox" name="tall-2-2" id="tall-2-2">
-                             <label for="tall-2-2">Paul Bunyan</label>
-                         </li>
-                     </ul>
-                 </li>
-                 <li>
-                     <input type="checkbox" name="tall-3" id="tall-3">
-                     <label for="tall-3">Two sandwiches</label>
-                 </li>
-            </ul>
-        </li>
-        <li>
-            <input type="checkbox" name="short" id="short">
-            <label for="short">Short Things</label>
+	                     <ul>
+	                         <li>
+	                             <input type="checkbox" name="tall-2-1" id="tall-2-1" class="indeterminate-checkbox">
+	                             <label for="tall-2-1">Andre</label>
+	                         </li>
+	                         <li>
+	                             <input type="checkbox" name="tall-2-2" id="tall-2-2" class="indeterminate-checkbox">
+	                             <label for="tall-2-2">Paul Bunyan</label>
+	                         </li>
+	                     </ul>
+	                 </li>
+	                 <li>
+	                     <input type="checkbox" name="tall-3" id="tall-3" class="indeterminate-checkbox">
+	                     <label for="tall-3">Two sandwiches</label>
+	                 </li>
+	            </ul>
+	        </li>
+	        <li>
+	            <input type="checkbox" name="short" id="short" class="indeterminate-checkbox">
+	            <label for="short">Short Things</label>
 
-            <ul>
-                 <li>
-                     <input type="checkbox" name="short-1" id="short-1">
-                     <label for="short-1">Smurfs</label>
-                 </li>
-                 <li>
-                     <input type="checkbox" name="short-2" id="short-2">
-                     <label for="short-2">Mushrooms</label>
-                 </li>
-                 <li>
-                     <input type="checkbox" name="short-3" id="short-3">
-                     <label for="short-3">One Sandwich</label>
-                 </li>
-            </ul>
-        </li>
-    </ul>
+	            <ul>
+	                 <li>
+	                     <input type="checkbox" name="short-1" id="short-1" class="indeterminate-checkbox">
+	                     <label for="short-1">Smurfs</label>
+	                 </li>
+	                 <li>
+	                     <input type="checkbox" name="short-2" id="short-2" class="indeterminate-checkbox">
+	                     <label for="short-2">Mushrooms</label>
+	                 </li>
+	                 <li>
+	                     <input type="checkbox" name="short-3" id="short-3" class="indeterminate-checkbox">
+	                     <label for="short-3">One Sandwich</label>
+	                 </li>
+	            </ul>
+	        </li>
+	    </ul>
+		</div>
 
 	</div>
 
