--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 
 <head>
 	<meta charset='UTF-8'>
-	<title>Indeterminate Checkboxes</title>
-	<link rel='stylesheet' href='css/style.css'>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+ 	<title>Indeterminate Checkboxes</title>
+ 	<link rel='stylesheet' href='css/style.css'>
+ 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 	<script src="indeterminateCheckbox.js"></script>
+	<script>
+			$(function() {
+					IndeterminateCheckbox.init();
+			});
+	</script>
 </head>
 
 <body>
@@ -84,6 +89,8 @@
 		</div>
 
 	</div>
+
+
 
  <style type="text/css" style="display: none !important;">
 	* {
